<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark">

        <ScrollView
            android:layout_width="match_parent"
            android:background="@drawable/background_gradient"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp"
                tools:context=".ui.fragments.WelcomeDotaFragment">

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/youtube_video_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:videoId="SmnqsdeHFT0"
                    app:autoPlay="false"
                    app:showFullScreenButton="false"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/masterpiace_game"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    android:text="@string/the_most_popular_game"/>


                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:text="@string/pc_gamer"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:textAlignment="textStart"
                    android:text="@string/one_field_to_fight"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:text="@string/all_heroes_are_free"/>

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:background="@drawable/introduction_items_cascade"
                    android:padding="10dp"
                    android:text="@string/dota2_text"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:id="@+id/button_play_now"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:background="@color/colorLightRed"
                    app:backgroundTint="@color/colorLightRed"
                    android:textColor="@color/colorWhite"
                    android:text="@string/play_now"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>
    </FrameLayout>

</layout>